--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-jwt": "^5.3.3",
+    "formidable": "^1.2.2",
     "g": "^2.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
